--- a/sineadpage.html
+++ b/sineadpage.html
@@ -25,7 +25,7 @@
             <div class="story-txt">
                 <iframe
                     mozallowfullscreen="true"
-                    src="sinead-story-1.html"
+                    src="sineadstory.html"
                     frameborder="0"
                     width="100%" height="100%"
                     id="twine-embed">
