story continued edits

--- a/doubled-images/benvictoriaold.html
+++ b/doubled-images/benvictoriaold.html
@@ -7,7 +7,6 @@
   </style>
   <link rel="stylesheet" href="ben-victoria.css"/> <!-- Custom Story CSS-->
   <link href="https://fonts.googleapis.com/css2?family=Maven+Pro:wght@400;500;600;700;800;900&display=swap" rel="stylesheet"> <!-- Maven Pro Font-->
-  <script src="https://code.jquery.com/jquery-3.5.0.js"></script> <!-- jQuery import-->
 </head>
 
 <body>
@@ -70,7 +69,8 @@ Glasses. Where are [[my glasses?-&gt;1. Stretching]]</div>
 
 </tw-passagedata>
 
-<tw-passagedata pid="2" name="1. Stretching" tags="" position="374.5,215.5" size="100,100">The darkness, I realize, is a dawn that hasn’t quite settled in yet. My glasses can only do so much now. <a class="appear">Let’s outdo the sun.</a><div class="hidden">
+<tw-passagedata pid="2" name="1. Stretching" tags="" position="374.5,215.5" size="100,100">The darkness, I realize, is a dawn that hasn’t quite settled in yet. My glasses can only do so much now. <a class="appear">Let’s outdo the sun.</a>
+<div class="hidden">
 I’m on the edge of the bed now, straightening out my limbs and snow-angeling the bed. Did these sheets feel this soft last night? My feet are killing me. These half-days in the hospital—all on feet. On edge. I’ll do a little stretching, paddling the air with the heels of my feet, before getting ready.
 
 1 2 3 4 5[[...-&gt;1.1 Meditation]]
