--- a/index.html
+++ b/index.html
@@ -60,6 +60,14 @@
           </span></div> 
   
           <!-- Story Two -->
+          <div class="popup" onclick="myFunction2()"><p><u><a href="#story2" class="Button story2"></a></u></p><span class="popuptext" id="myPopup2"> 
+            <h1>Story Title</h1>
+            <p>This is story number three. It's awesome. (Should be over South Korea. This placement might be tricky)<br>
+          <a href="story-template.html" class="enterButton">enter</a>
+            </p>
+          </span></div> 
+
+          <!-- Story Three -->
           <div class="popup" onclick="myFunction3()"><p><u><a href="#story3" class="Button story3"></a></u></p><span class="popuptext" id="myPopup3"> 
             <h1>I See You</h1>
             <p>This is story number three. It's awesome. (Should be over Philly-ish. This placement might be tricky)<br>
@@ -80,6 +88,10 @@
             //probably a simpler way to write this, but here's the popup functions//
             function myFunction() {
               var popup = document.getElementById("myPopup1");
+              popup.classList.toggle("show");
+            }
+            function myFunction2() {
+              var popup = document.getElementById("myPopup2");
               popup.classList.toggle("show");
             }
             function myFunction3() {
