--- a/doubledfrontstory.html
+++ b/doubledfrontstory.html
@@ -306,9 +306,9 @@ Nurses like me.
 
 In those moments, they must have reckoned: with news of their patients, those who made it and those who didn’t, new faces and lost; with shortages of PPE, with use-anything-you-can-find prayers, high exposure, vulnerability; and with this. All of this. 
 
-//Why are you killing us?//
+(align: "=><==")[//Why are you killing us?//]
 
-//Killing us with your Chinese virus?//
+(align: "==><=")[//Killing us with your Chinese virus?//]
 
 These are the things they say.
 
