--- a/index.html
+++ b/index.html
@@ -61,9 +61,9 @@
   
           <!-- Story Two -->
           <div class="popup" onclick="myFunction2()"><p><u><a href="#story2" class="Button story2"></a></u></p><span class="popuptext" id="myPopup2"> 
-            <h1>Story Title</h1>
+            <h1>Digital Sex Crimes in South Korea</h1>
             <p>This is story number three. It's awesome. (Should be over South Korea. This placement might be tricky)<br>
-          <a href="story-template.html" class="enterButton">enter</a>
+          <a href="SallyLaurenDraft2.html" class="enterButton">enter</a>
             </p>
           </span></div> 
 
