added modal but can't figure out how to work

--- a/doubledfrontstory.html
+++ b/doubledfrontstory.html
@@ -248,7 +248,7 @@ Mask-on (link-repeat: &quot;(the right way, of course):&quot;)[(open-url: &#39;h
 	$(document).ready(function(){
 		$(".lastDigit").click(function(){
 			$(".changeNum").replaceWith("0");
-			$(".p00").delay(2000).fadeOut(300).queue(function(){
+			$(".p00").delay(2000).fadeOut(0).queue(function(){
 				$(".firstNum").replaceWith("05:3");
 			});
 		});
@@ -325,6 +325,7 @@ I guess scrubs can only lend you so much seeming legitimacy, belonging. I’m ok
 </script>
 </tw-passagedata>
 
+<!-- Passage 7 Flyer -->
 <tw-passagedata pid="8" name="7. Flyer" tags="" position="216,356" size="100,100">I’m almost at the hospital now, just a few blocks now. The subway car was totally empty this morning and smelled so heavily of disinfectant my nose stung.
 
 An ambulance drives by. It’s quiet, no sirens, and its silence almost owes itself to a perceived slowness. For a moment, it seems in near rest. And down the block rounding the corner now is another ambulance, sirens on. There is someone in there, someone there. Maybe I’ll meet them today.
@@ -336,7 +337,14 @@ Oh, a flyer. I think I can make it out from here—it’s about Asian identity, 
 I do have some time to spare. And? Do I choose to be reminded of this burden? And now with all of this, this pandemic too—can I sacrifice my energy for anything else? Is it really only as valid as I myself give it attention?
 
 [[Pause, take a look.-&gt;8.1. Pause, Read]]
-[[Briefly glance at it, walk past.-&gt;8.2. Pass, Ignore]]</tw-passagedata><tw-passagedata pid="9" name="8.1. Pause, Read" tags="" position="137,514" size="100,100">Ah, I see. It’s about hate crimes against individuals of East Asian descent, reminding victims and bystanders to report hate crimes to the authorities.
+[[Briefly glance at it, walk past.-&gt;8.2. Pass, Ignore]]</tw-passagedata>
+
+<!-- Passage 8 Pause -->
+<tw-passagedata pid="9" name="8.1. Pause, Read" tags="" position="137,514" size="100,100">
+	
+Ah I see.
+
+It’s about hate crimes against individuals of East Asian descent, reminding victims and bystanders to report hate crimes to the authorities.
 
 //Hate is also a virus, but together we can fight this too.//
 	
@@ -346,7 +354,11 @@ Now, I need to devote myself to my patients. They deserve the best I can provide
 
 My breath feels even warmer on my face now. And it does feels nice—a hand on the shoulder—to be validated, to know that there are people listening.
 
-[[Let&#39;s get going.-&gt;9. Hospital]]</tw-passagedata><tw-passagedata pid="10" name="8.2. Pass, Ignore" tags="" position="288,514" size="100,100">I slow my pace a bit, turning my chin slightly. I make out a few words, a graphic. (link-repeat: &quot;A glimpse.&quot;)[(open-url: &#39;https://www.facebook.com/photo.php?fbid=3556761544341027&amp;set=gm.10163722233095637&amp;type=3&amp;theater&amp;ifg=1&#39;)] It’s about hate crimes, attacks against those who look like me. I sense a part of me holding back. This selective vision. Maybe some wouldn’t understand. But I’ve known this all my life.
+[[Let&#39;s get going.-&gt;9. Hospital]]
+
+</tw-passagedata>
+
+<tw-passagedata pid="10" name="8.2. Pass, Ignore" tags="" position="288,514" size="100,100">I slow my pace a bit, turning my chin slightly. I make out a few words, a graphic. (link-repeat: &quot;A glimpse.&quot;)[(open-url: &#39;https://www.facebook.com/photo.php?fbid=3556761544341027&amp;set=gm.10163722233095637&amp;type=3&amp;theater&amp;ifg=1&#39;)] It’s about hate crimes, attacks against those who look like me. I sense a part of me holding back. This selective vision. Maybe some wouldn’t understand. But I’ve known this all my life.
 
 I’m told that they’re just jokes: the eye-pulling—oh, is it called fox-eye now?—and c-word, Ling-Ling and Ching-Chong, my lunch deemed inedible, too foreign. 
 
