--- a/sineadstory.html
+++ b/sineadstory.html
@@ -67,10 +67,10 @@ Subject: The world is ending??!&quot;)&#96;&#96;
 	  });
   &lt;/script&gt;
 {
-|p1)[How are you? I hope you&#39;re well, and safe! Doesn’t it feel like we&#39;re in a film? Like one of those scary &lt;span class=&quot;clickers&quot; id=&quot;1&quot;&gt;zombie end-of-the-world&lt;/span&gt; kind of films that Mam wouldn’t let me watch (but I&#39;ve seen the trailers of.) When the news said that the coronavirus was a pandemic, I didn&#39;t even know what that meant - apparently it means that the virus is everywhere. &lt;span class= &quot;clickers&quot;  id=&quot;2&quot;&gt;Everywhere!&lt;/span&gt; So I do particularly hope you&#39;re okay, even if most of the cases are in Italy.
+|p1)[How are you? I hope you&#39;re well, and safe! Doesn’t it feel like we&#39;re in a film? Like one of those scary &lt;span class=&quot;appear&quot; id=&quot;flyer&quot;&gt;zombie end-of-the-world&lt;/span&gt; kind of films that Mam wouldn’t let me watch (but I&#39;ve seen the trailers of.) When the news said that the coronavirus was a pandemic, I didn&#39;t even know what that meant - apparently it means that the virus is everywhere. &lt;span class= &quot;clickers&quot;  id=&quot;2&quot;&gt;Everywhere!&lt;/span&gt; So I do particularly hope you&#39;re okay, even if most of the cases are in Italy.
 
 &lt;script&gt;
-	  var $1 = document.getElementById(&#39;1&#39;).addEventListener(&quot;click&quot;, function() {
+	  var $1 = document.getElementById(&#39;flyer&#39;).addEventListener(&quot;click&quot;, function() {
 		  console.log(&quot;img clicker 1 clicked!&quot;);
 		  window.top.postMessage(&#39;img1&#39;, &#39;*&#39;);	
 	  });
