about page created

--- a/index.html
+++ b/index.html
@@ -13,10 +13,10 @@
         <link rel="shortcut icon" href="images/white-logo.svg"/>
         <!-- Fonts -->
         <link href="https://fonts.googleapis.com/css2?family=Maven+Pro:wght@400;700&display=swap" rel="stylesheet"> <!-- Maven Pro font -->
-        <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@400;700&display=swap" rel="stylesheet"> <!-- Playfair font-->
+        <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@400;700;900&display=swap" rel="stylesheet"> <!-- Playfair font-->
         
          <!--icon-->
-            <link rel="shortcut icon" href="images/crownlogofavicon_io/favicon.ico"/>
+        <link rel="shortcut icon" href="images/crownlogofavicon_io/favicon.ico"/>
     
             <!-- Global site tag (gtag.js) - Google Analytics -->
             <script async src="https://www.googletagmanager.com/gtag/js?id=UA-176737183-1"></script>
