--- a/i-see-you-1.html
+++ b/i-see-you-1.html
@@ -11,17 +11,17 @@
 
 <tw-story></tw-story>
 
-<tw-storydata name="i-see-you-1" startnode="18" creator="Twine" creator-version="2.3.9" ifid="1F4298A5-98CE-4D4C-808B-9AD3C35DE62F" zoom="1" format="Harlowe" format-version="3.1.0" options="" hidden><style role="stylesheet" id="twine-user-stylesheet" type="text/twine-css">@import 'https://fonts.googleapis.com/css2?family=Vollkorn&display=swap" rel="stylesheet"';
+<tw-storydata name="i-see-you-1" startnode="18" creator="Twine" creator-version="2.3.9" ifid="1F4298A5-98CE-4D4C-808B-9AD3C35DE62F" zoom="1" format="Harlowe" format-version="3.1.0" options="" hidden><style role="stylesheet" id="twine-user-stylesheet" type="text/twine-css">@import 'https://fonts.googleapis.com/css2?family=Open+Sans&display=swap" rel="stylesheet"';
 
 tw-story {
-  font-family: 'Vollkorn', serif;
+  font-family: 'Open Sans', sans-serif;
   font-size: 150%;
-  color: black;
-  background-color: #C9DAEA;
+  color: #F5F3F5;
+  background-color: #779EE7;
 }
 
 tw-link {
-  color: #9A031E;
+  color: #333333;
 }
 
 tw-link:hover {
@@ -31,7 +31,7 @@ tw-link:hover {
 
 &lt;center&gt; &lt;img src=&quot;images/i-see-you/1.jpg&quot; height=&quot;400&quot; alt=&quot;kitchen scene&quot;&gt; &lt;/center&gt;
 
-Weather reports suggest a large storm with hurricane-level winds will hit later on in the week. Your mind is clouded with tasks you need to complete and your phone grows heavy in your hand. 
+Weather reports suggest a large storm with hurricane-level winds will hit later on in the week. Your mind is clouded with tasks you need to complete and your phone grows heavy in your hand.
 
 [[Wake up]]
 
@@ -44,7 +44,7 @@ Weather reports suggest a large storm with hurricane-level winds will hit later 
 
 [[→Continue-&gt;→Click to continue 1]]</tw-passagedata><tw-passagedata pid="4" name="→Click to continue 1" tags="" position="523,531" size="100,100">[[Symptoms]]
 
-[[No symptoms]]</tw-passagedata><tw-passagedata pid="5" name="Symptoms" tags="" position="448,681" size="100,100">The nurse looks down and reviews your questionnaire on her screen, “I’m sorry, but I can’t let you into the hospital. Please go home and only come back when you are feeling better and symptom free.”</tw-passagedata><tw-passagedata pid="6" name="No symptoms" tags="" position="599,682" size="100,100">After filling out the questionnaire, you walk over to the nurse’s station to have your temperature checked. A masked woman points a scanner at your forehead and it reads 96.8ºF. She motions for you to further enter the hospital. 
+[[No symptoms]]</tw-passagedata><tw-passagedata pid="5" name="Symptoms" tags="" position="372,661" size="100,100">The nurse looks down and reviews your questionnaire on her screen, “I’m sorry, but I can’t let you into the hospital. Please go home and only come back when you are feeling better and symptom free.”</tw-passagedata><tw-passagedata pid="6" name="No symptoms" tags="" position="599,682" size="100,100">After filling out the questionnaire, you walk over to the nurse’s station to have your temperature checked. A masked woman points a scanner at your forehead and it reads 96.8ºF. She motions for you to further enter the hospital. 
 
 
 [[→Continue-&gt;→Click to continue 2]] </tw-passagedata><tw-passagedata pid="7" name="Gloves" tags="" position="403,970" size="100,100">You’re already equipped with your protective equipment. The N95 mask and face shield moistens with a combination of coffee breath and sweat. You’ve been instructed that gloves aren’t mandatory if you wash your hands regularly. But the bunches of blue latex surgical gloves are in your vicinity. You reach to slap on a pair.
@@ -111,17 +111,16 @@ COVID-19 looms heavy over all us, even with particle matter of just 125 nanomete
 
 Today’s job is done. Now, to call about that damn microwave.
 
-&lt;center&gt; &lt;img src=&quot;images/i-see-you/5.jpg&quot; height=&quot;400&quot; alt=&quot;that damn microwave&quot;&gt; &lt;/center&gt;</tw-passagedata><tw-passagedata pid="17" name="→Click to continue 2" tags="" position="553,803" size="100,100">You walk through the hospital and make your way over to the pre-operative area where your patient is waiting for surgery. Only one case today, a femur fracture, and then you can get home and see if you can call someone for the microwave. The patient is in a separate room with the door closed––he has tested positive for COVID-19. You grab a N95 mask and a pair of goggles so that your eyes can be covered. You pause for a second at the glove box…
+&lt;center&gt; &lt;img src=&quot;images/i-see-you/5.jpg&quot; height=&quot;400&quot; alt=&quot;that damn microwave&quot;&gt; &lt;/center&gt;</tw-passagedata><tw-passagedata pid="17" name="→Click to continue 2" tags="" position="571,856" size="100,100">You walk through the hospital and make your way over to the pre-operative area where your patient is waiting for surgery. Only one case today, a femur fracture, and then you can get home and see if you can call someone for the microwave. The patient is in a separate room with the door closed––he has tested positive for COVID-19. You grab a N95 mask and a pair of goggles so that your eyes can be covered. You pause for a second at the glove box…
 
 &lt;center&gt; &lt;img src=&quot;images/i-see-you/3.jpg&quot; height=&quot;400&quot; alt=&quot;glove box&quot;&gt; &lt;/center&gt;
-
 
 [[Gloves]]
 
 [[No gloves]]</tw-passagedata><tw-passagedata pid="18" name="Title" tags="" position="603,54" size="100,100">
 &lt;center&gt; &lt;img src=&quot;images/i-see-you/title.gif&quot; width=&quot;400&quot; height=&quot;400&quot; alt=&quot;cover image&quot;&gt; &lt;/center&gt;
 =&gt;&lt;=
-[[Begin-&gt;Introduction]] </tw-passagedata></tw-storydata>
+[[Begin-&gt;Introduction]]</tw-passagedata></tw-storydata>
 
 <script title="Twine engine code" data-main="harlowe">"use strict";function _defineProperty(e,t,n){return t in e?Object.defineProperty(e,t,{value:n,enumerable:!0,configurable:!0,writable:!0}):e[t]=n,e}function _toConsumableArray(e){if(Array.isArray(e)){for(var t=0,n=Array(e.length);t<e.length;t++)n[t]=e[t];return n}return Array.from(e)}var _slicedToArray=function(){function e(e,t){var n=[],r=!0,i=!1,o=void 0;try{for(var a,s=e[Symbol.iterator]();!(r=(a=s.next()).done)&&(n.push(a.value),!t||n.length!==t);r=!0);}catch(e){i=!0,o=e}finally{try{!r&&s.return&&s.return()}finally{if(i)throw o}}return n}return function(t,n){if(Array.isArray(t))return t;if(Symbol.iterator in Object(t))return e(t,n);throw new TypeError("Invalid attempt to destructure non-iterable instance")}}(),_typeof="function"==typeof Symbol&&"symbol"==typeof Symbol.iterator?function(e){return typeof e}:function(e){return e&&"function"==typeof Symbol&&e.constructor===Symbol&&e!==Symbol.prototype?"symbol":typeof e};!function(){/**
  * @license almond 0.3.3 Copyright jQuery Foundation and other contributors.
