--- a/sinead-page-1.html
+++ b/sinead-page-1.html
@@ -86,6 +86,12 @@
                         else if (s==3) {
                             body.style.backgroundImage = "url('images/sinead/bg3.jpg')";
                         }
+                        else if (s==4) {
+                            body.style.backgroundImage = "url('images/sinead/bg4.jpg')";
+                        }
+                        else if (s==5) {
+                            body.style.backgroundImage = "url('images/sinead/desktop.png')";
+                        }
                         else if (s=='a') {
                             body.style.backgroundImage = "url('images/sinead/bg-a.jpg')";
                         }
