--- a/sinead-story-1.html
+++ b/sinead-story-1.html
@@ -11,11 +11,19 @@
 
 <tw-story></tw-story>
 
-<tw-storydata name="sinead-story-1" startnode="158" creator="Twine" creator-version="2.3.9" ifid="F9D9637C-FBA8-4102-897A-C51BC9D7C952" zoom="1" format="Harlowe" format-version="3.1.0" options="" hidden><style role="stylesheet" id="twine-user-stylesheet" type="text/twine-css">tw-story {
+<tw-storydata name="sinead-story-1" startnode="96" creator="Twine" creator-version="2.3.9" ifid="F9D9637C-FBA8-4102-897A-C51BC9D7C952" zoom="0.25" format="Harlowe" format-version="3.1.0" options="" hidden><style role="stylesheet" id="twine-user-stylesheet" type="text/twine-css">tw-story {
   background-color: white;
   font-family: calibri;
   font-size: 140%;
   color: black;
+}
+
+html {
+  background-color: white;
+}
+
+html.dreams {
+  background-color: black;
 }
 
 .clickers {
@@ -39,7 +47,7 @@ tw-icon.redo {
 
 tw-icon.undo {
   /* display:none;*/
-}</style><script role="script" id="twine-user-script" type="text/twine-javascript"></script><tw-passagedata pid="1" name="Begin" tags="" position="834,141" size="200,100">=&gt;&lt;=
+}</style><script role="script" id="twine-user-script" type="text/twine-javascript"></script><tw-tag name="dreams" color="red"></tw-tag><tw-passagedata pid="1" name="Begin" tags="" position="834,141" size="200,100">=&gt;&lt;=
 &lt;div class=&quot;clickers&quot; id=&quot;1&quot;&gt;[[You&#39;ve got mail!]]&lt;/div&gt;
 
 &lt;script&gt;
@@ -260,9 +268,20 @@ Subject: __
 
 [[Open4]]</tw-passagedata><tw-passagedata pid="91" name="Open4" tags="" position="5791,4463" size="100,100">Dear [[Sinead,]]</tw-passagedata><tw-passagedata pid="92" name="Sinead," tags="" position="5791,4613" size="100,100">Now that the school year’s over, it’s so quiet. It’s too hot to bike outside so now all I do is float in the neighbor’s [[above-ground pool.]] Jane can’t stand the [[frogs.]] Mom just fixates on the fact that she can still hear the highway. Everyday is the same now. I don’t know if it’s because I wear the same set of clothes day-after-day or because my sleep schedule is also so messed up. I did [[laundry]] for the first time in eight weeks. I know, bad. But it was all pajamas anyway.
 
-[[Continue18]]</tw-passagedata><tw-passagedata pid="93" name="above-ground pool." tags="" position="5566,4763" size="100,100">image</tw-passagedata><tw-passagedata pid="94" name="frogs." tags="" position="5717,4763" size="100,100">image</tw-passagedata><tw-passagedata pid="95" name="laundry" tags="" position="5867,4763" size="100,100">image</tw-passagedata><tw-passagedata pid="96" name="Continue18" tags="" position="6016,4763" size="100,100">In the beginning, seeing my classmates through FaceTime kept me going but now it’s my daily drive with Jane. Picking up [[sweet tea]] gives us something to do. Reminds us of dad. Not having final tests was a relief but kind of scary at the same time. I do keep having the strangest [[dreams.]] Always this one where I know I left something important, who knows what, in Ms. Day’s classroom, and they won’t let me into the school. I think I just miss my friends.
+[[Continue18]]</tw-passagedata><tw-passagedata pid="93" name="above-ground pool." tags="" position="5566,4763" size="100,100">image</tw-passagedata><tw-passagedata pid="94" name="frogs." tags="" position="5717,4763" size="100,100">image</tw-passagedata><tw-passagedata pid="95" name="laundry" tags="" position="5867,4763" size="100,100">image</tw-passagedata><tw-passagedata pid="96" name="Continue18" tags="" position="6073,4725" size="100,100">&lt;script&gt;
+	window.top.postMessage(&#39;bg5&#39;, &#39;*&#39;);
+&lt;/script&gt;
 
-[[Continue19]]</tw-passagedata><tw-passagedata pid="97" name="sweet tea" tags="" position="5866,4912" size="100,100">image</tw-passagedata><tw-passagedata pid="98" name="dreams." tags="" position="6016,4913" size="100,100">image</tw-passagedata><tw-passagedata pid="99" name="Continue19" tags="" position="6166,4912" size="100,100">When they sent us home in March, I didn’t really understand what was going on. The catastrophe didn’t register. Like you, I just thought we would have two weeks to do whatever we wanted, like an early summer. A week after the first case was announced, Mom had to close the [[restaurant.]] She used to say it&#39;s worse than [[Katrina]]… not knowing what to do, not moving [[shoulder-to-shoulder]] in the kitchen, not being able to even hug. Mom’s back at the restaurant but they&#39;re only offering take-out. People text in their orders. Each ding is a little party. The [[Krewe of Red Beans]] bought a ton of food to deliver to front line workers so that’s helped. After she comes home and showers, she just falls asleep on the couch. There’s a trash bin by the front door full of [[purple disposable gloves. ]]
+In the beginning, seeing my classmates through FaceTime kept me going but now it’s my daily drive with Jane. Picking up [[sweet tea]] gives us something to do. Reminds us of dad. Not having final tests was a relief but kind of scary at the same time. I do keep having the strangest &lt;span class = &quot;clickers&quot; id = &quot;bg&quot;&gt;[[dreams]]&lt;/span&gt;. Always this one where I know I left something important, who knows what, in Ms. Day’s classroom, and they won’t let me into the school. I think I just miss my friends.
+
+[[Continue19]]
+
+&lt;script&gt;
+	var $bg = document.getElementById(&#39;bg&#39;).addEventListener(&quot;click&quot;, function() {
+		  console.log(&quot;bg clicker 4 clicked!&quot;);
+		  window.top.postMessage(&#39;bg4&#39;, &#39;*&#39;);
+	  });
+&lt;/script&gt;</tw-passagedata><tw-passagedata pid="97" name="sweet tea" tags="" position="5866,4912" size="100,100">image</tw-passagedata><tw-passagedata pid="98" name="dreams." tags="" position="5671,4924" size="100,100">image</tw-passagedata><tw-passagedata pid="99" name="Continue19" tags="" position="6166,4912" size="100,100">When they sent us home in March, I didn’t really understand what was going on. The catastrophe didn’t register. Like you, I just thought we would have two weeks to do whatever we wanted, like an early summer. A week after the first case was announced, Mom had to close the [[restaurant.]] She used to say it&#39;s worse than [[Katrina]]… not knowing what to do, not moving [[shoulder-to-shoulder]] in the kitchen, not being able to even hug. Mom’s back at the restaurant but they&#39;re only offering take-out. People text in their orders. Each ding is a little party. The [[Krewe of Red Beans]] bought a ton of food to deliver to front line workers so that’s helped. After she comes home and showers, she just falls asleep on the couch. There’s a trash bin by the front door full of [[purple disposable gloves. ]]
 
 [[Continue20]]</tw-passagedata><tw-passagedata pid="100" name="restaurant." tags="" position="5866,5063" size="100,100">image</tw-passagedata><tw-passagedata pid="101" name="Katrina" tags="" position="6015,5064" size="100,100">image</tw-passagedata><tw-passagedata pid="102" name="shoulder-to-shoulder" tags="" position="6166,5063" size="100,100">image</tw-passagedata><tw-passagedata pid="103" name="Krewe of Red Beans" tags="" position="6315,5063" size="100,100">link</tw-passagedata><tw-passagedata pid="104" name="purple disposable gloves. " tags="" position="6466,5063" size="100,100">image</tw-passagedata><tw-passagedata pid="105" name="Continue20" tags="" position="6586,5068" size="100,100">Jane and I have been delivering food to our neighbors. I can’t help tiptoeing up the drive and jumping back when I drop the [[bags]] on the front door step. I still forget that people [[can’t see me smiling]] with my mask. My [[tennis shoes]] are still damp from two days ago. Jane’s car died when we were dropping off groceries so we had to walk all the way home in the rain.
 
@@ -346,7 +365,7 @@ Written by Jane Loughman and Elisabeth McLaughlin
 		});
 &lt;/script&gt;
 
-</tw-passagedata><tw-passagedata pid="163" name="You&#39;ve got mail!" tags="" position="901,310" size="100,100">Double-click this passage to edit it.</tw-passagedata><tw-passagedata pid="164" name="teste" tags="" position="488,275" size="100,100">My routine is pretty mad - it doesn’t really exist to be fair. Sometimes I wake up at &lt;span class=&quot;clickers&quot; id=&quot;1&quot;&gt;10 am&lt;/span&gt; and every now and then I wake up at &lt;span class=&quot;clickers&quot; id=&quot;2&quot;&gt;2pm!&lt;/span&gt; I get distracted by TikTok often - Mam is taking my phone away earlier in the evening now. At least I&#39;m not stuck in the little area of [[2 or 5km]] around me anymore. I’ll probably still be spending a lot of time at home anyway since school isn’t on. There might be summer camps though…
+</tw-passagedata><tw-passagedata pid="163" name="You&#39;ve got mail!" tags="" position="901,310" size="100,100">Double-click this passage to edit it.</tw-passagedata><tw-passagedata pid="164" name="teste" tags="" position="442,253" size="100,100">My routine is pretty mad - it doesn’t really exist to be fair. Sometimes I wake up at &lt;span class=&quot;clickers&quot; id=&quot;1&quot;&gt;10 am&lt;/span&gt; and every now and then I wake up at &lt;span class=&quot;clickers&quot; id=&quot;2&quot;&gt;2pm!&lt;/span&gt; I get distracted by TikTok often - Mam is taking my phone away earlier in the evening now. At least I&#39;m not stuck in the little area of [[2 or 5km]] around me anymore. I’ll probably still be spending a lot of time at home anyway since school isn’t on. There might be summer camps though…
 
 [[Continue15]]
 
@@ -359,7 +378,15 @@ Written by Jane Loughman and Elisabeth McLaughlin
 		  console.log(&quot;bg clicker 2 clicked!&quot;);
 		  window.top.postMessage(&#39;bg2&#39;, &#39;*&#39;);
 	  });
-&lt;/script&gt;</tw-passagedata></tw-storydata>
+&lt;/script&gt;</tw-passagedata><tw-passagedata pid="165" name="dreams" tags="dreams" position="6309,4646" size="100,100">(event: when time &gt; 3s)[(t8n: &quot;dissolve&quot;)(show: ?p1)]
+
+=&gt;&lt;=
+|p1)[[[&lt;span class=&quot;clickers&quot; id=&quot;bg&quot;&gt;wake up&lt;/span&gt;-&gt;Continue18]]]</tw-passagedata><tw-passagedata pid="166" name="header" tags="header" position="468,60.5" size="100,100">{
+(print: &quot;&lt;script&gt;$(&#39;html&#39;).removeClass(\)&lt;/script&gt;&quot;)
+(if: (passage:)&#39;s tags&#39;s length &gt; 0)[
+(print: &quot;&lt;script&gt;$(&#39;html&#39;).addClass(&#39;&quot; + (passage:)&#39;s tags.join(&#39; &#39;) + &quot;&#39;\)&lt;/script&gt;&quot;)
+]
+}</tw-passagedata><tw-passagedata pid="167" name="Continue18&lt;/span&gt;" tags="" position="6309,4796" size="100,100">Double-click this passage to edit it.</tw-passagedata></tw-storydata>
 
 <script title="Twine engine code" data-main="harlowe">"use strict";function _defineProperty(e,t,n){return t in e?Object.defineProperty(e,t,{value:n,enumerable:!0,configurable:!0,writable:!0}):e[t]=n,e}function _toConsumableArray(e){if(Array.isArray(e)){for(var t=0,n=Array(e.length);t<e.length;t++)n[t]=e[t];return n}return Array.from(e)}var _slicedToArray=function(){function e(e,t){var n=[],r=!0,i=!1,o=void 0;try{for(var a,s=e[Symbol.iterator]();!(r=(a=s.next()).done)&&(n.push(a.value),!t||n.length!==t);r=!0);}catch(e){i=!0,o=e}finally{try{!r&&s.return&&s.return()}finally{if(i)throw o}}return n}return function(t,n){if(Array.isArray(t))return t;if(Symbol.iterator in Object(t))return e(t,n);throw new TypeError("Invalid attempt to destructure non-iterable instance")}}(),_typeof="function"==typeof Symbol&&"symbol"==typeof Symbol.iterator?function(e){return typeof e}:function(e){return e&&"function"==typeof Symbol&&e.constructor===Symbol&&e!==Symbol.prototype?"symbol":typeof e};!function(){/**
  * @license almond 0.3.3 Copyright jQuery Foundation and other contributors.
