--- a/sinead-story-1.html
+++ b/sinead-story-1.html
@@ -340,8 +340,9 @@ Subject: Back to school season looks different
 [[Continue31]]</tw-passagedata><tw-passagedata pid="154" name="ate at home." tags="" position="9083,7164" size="100,100">image</tw-passagedata><tw-passagedata pid="155" name="country." tags="" position="9234,7164" size="100,100">image</tw-passagedata><tw-passagedata pid="156" name="Continue31" tags="" position="9384,7164" size="100,100">Are you back to school yet? America usually starts a bit earlier right? 
 
 Lots and lots and lots of love,
-[[Sinead :)]]</tw-passagedata><tw-passagedata pid="157" name="Sinead :)" tags="" position="9384,7314" size="100,100">Double-click this passage to edit it.</tw-passagedata><tw-passagedata pid="158" name="Start" tags="" position="628,112" size="100,100">=&gt;&lt;=
+[[Sinead :)]]</tw-passagedata><tw-passagedata pid="157" name="Sinead :)" tags="" position="9384,7314" size="100,100">Double-click this passage to edit it.</tw-passagedata><tw-passagedata pid="158" name="Start" tags="" position="624,108" size="100,100">
 
+=&gt;&lt;=
 **Sinead and Louisa**
 
 Written by Jane Loughman and Elisabeth McLaughlin
