--- a/about.html
+++ b/about.html
@@ -23,55 +23,46 @@
 
   <body>
       <div class="container-fluid">
-        <!-- Logo & Name -->
-        <div class="row">
-            <div class="col-1 mt-1">
-                <img src="images/favicon_io/maroon-logo.png" style="width:100px">
-            </div>
-            <div class="col">
-                <h3>what IF</h3>
-            </div>
-        </div>
         <!-- Title -->
         <div class="row justify-content-center">
-            <div class="col-8 text-center ml-5">
-                <h1 class="text-responsive"><span id="story">THE STORY<br>OF</span></h1>
-                <img src="aboutIF.svg" class="img-fluid" alt="Responsive image">
+            <div class="col-8 mxml-5">
+              <img src="theStoryOf.svg" class="img-fluid mx-auto d-block title" alt="Responsive image">
             </div>
         </div>
         <!-- Mission Statement -->
         <div class="row justify-content-center">
-            <div class="col-6 text-center">
+            <div class="col-6 text-justify mission">
                 <h4>Mission Statement Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut.</h4>
             </div>
         </div>
         <!-- Numbers -->
-        <div class="row justify-content-center">
-            <div class="col-3 text-center">
+        <div class="row justify-content-center numbers">
+            <div class="col-3 text-center digits">
                 <h1>13</h1>
-                <p>text text text</p>
+                <p>active members</p>
             </div>
-            <div class="col-3 text-center">
-                <h1>13</h1>
-                <p>text text text</p>
+            <div class="col-3 text-center digits">
+                <h1>6</h1>
+                <p>unique countries</p>
             </div>
         </div>
         <!-- Contact Us-->
         <div class="row justify-content-center">
-            <div class="col-6 text-center">
+            <div class="col-6 text-justify contact">
+                <h4>Contact Us: columbiaintfic@gmail.com</h4>
                 <h4>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. </h4>
             </div>
         </div>
       </div>
 
-      <nav class="navbar navbar-expand-lg navbar-light bg-light fixed-bottom">
-        <a class="navbar-brand" href="#"> </a>
+      <nav class="navbar navbar-custom navbar-expand-lg navbar-light fixed-bottom">
+        <a class="navbar-brand" href="/index.html"><img src="images/favicon_io/maroon-logo.png" style="width:40px"></a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse justify-content-end" id="navbarNavAltMarkup">
           <div class="navbar-nav">
-            <a class="nav-link active" href="about.html">about <span class="sr-only">(current)</span></a>
+            <a class="nav-link active current" href="about.html">about <span class="sr-only">(current)</span></a>
             <a class="nav-link" href="team.html">meet the team</a>
             <a class="nav-link" href="submit.html">submit a story</a>
           </div>
