--- a/about.html
+++ b/about.html
@@ -26,7 +26,7 @@
         <!-- Title -->
         <div class="row justify-content-center">
             <div class="col-8 mxml-5">
-              <img src="theStoryOf.svg" class="img-fluid mx-auto d-block title" alt="Responsive image">
+              <img src="/images/theStoryOf.svg" class="img-fluid mx-auto d-block title" alt="Responsive image">
             </div>
         </div>
         <!-- Mission Statement -->
@@ -48,9 +48,12 @@
         </div>
         <!-- Contact Us-->
         <div class="row justify-content-center">
-            <div class="col-6 text-justify contact">
-                <h4>Contact Us: columbiaintfic@gmail.com</h4>
-                <h4>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. </h4>
+          <div class="col-1 text-justify contact">
+              <img src="images/mail.svg" class="icon">
+          </div>
+          <div class="col-5 text-justify contact">
+              <h4>columbiaintfic@gmail.com</h4>
+              <h4>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. </h4>
             </div>
         </div>
       </div>
