created team page

--- a/team.html
+++ b/team.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
 
     <!-- Custom CSS-->
-    <link rel="stylesheet" href="about.css"/>
+    <link rel="stylesheet" href="team.css"/>
 
     <!-- Icon -->
     <link rel="shortcut icon" href="images/white-logo.svg"/>
@@ -26,34 +26,70 @@
         <!-- Title -->
         <div class="row justify-content-center">
             <div class="col-8 mxml-5">
-              <img src="theStoryOf.svg" class="img-fluid mx-auto d-block title" alt="Responsive image">
+              <img src="images/team.svg" class="img-fluid mx-auto d-block title" alt="Responsive image">
             </div>
         </div>
-        <!-- Mission Statement -->
+        <!-- Members -->
         <div class="row justify-content-center">
-            <div class="col-6 text-justify mission">
-                <h4>Mission Statement Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut.</h4>
+            <div class="col-2 text-justify member">
+                <img src="teamPhotos/vic.png" class="img-fluid mx-auto d-block title" alt="Responsive image">
+                <h4>Name</h4>
+                <p>A short sentence or two about yourself, interests etc.</p>
+                <img src="images/membermail.svg" style="width:40px">
+                <img src="images/memberlinkedin.svg" style="width:40px">
+            </div>
+            <div class="col-2 text-justify member">
+                <img src="teamPhotos/vic.png" class="img-fluid mx-auto d-block title" alt="Responsive image">
+                <h4>Name</h4>
+                <p>A short sentence or two about yourself, interests etc.</p>
+                <img src="images/membermail.svg" style="width:40px">
+                <img src="images/memberlinkedin.svg" style="width:40px">
+            </div>
+            <div class="col-2 text-justify member">
+                <img src="teamPhotos/vic.png" class="img-fluid mx-auto d-block title" alt="Responsive image">
+                <h4>Name</h4>
+                <p>A short sentence or two about yourself, interests etc.</p>
+                <img src="images/membermail.svg" style="width:40px">
+                <img src="images/memberlinkedin.svg" style="width:40px">
+            </div>
+            <div class="col-2 text-justify member">
+                <img src="teamPhotos/vic.png" class="img-fluid mx-auto d-block title" alt="Responsive image">
+                <h4>Name</h4>
+                <p>A short sentence or two about yourself, interests etc.</p>
+                <img src="images/membermail.svg" style="width:40px">
+                <img src="images/memberlinkedin.svg" style="width:40px">
             </div>
         </div>
-        <!-- Numbers -->
-        <div class="row justify-content-center numbers">
-            <div class="col-3 text-center digits">
-                <h1>13</h1>
-                <p>active members</p>
-            </div>
-            <div class="col-3 text-center digits">
-                <h1>6</h1>
-                <p>unique countries</p>
-            </div>
-        </div>
-        <!-- Contact Us-->
         <div class="row justify-content-center">
-            <div class="col-6 text-justify contact">
-                <h4>Contact Us: columbiaintfic@gmail.com</h4>
-                <h4>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. </h4>
+            <div class="col-2 text-justify member">
+                <img src="teamPhotos/vic.png" class="img-fluid mx-auto d-block title" alt="Responsive image">
+                <h4>Name</h4>
+                <p>A short sentence or two about yourself, interests etc.</p>
+                <img src="images/membermail.svg" style="width:40px">
+                <img src="images/memberlinkedin.svg" style="width:40px">
+            </div>
+            <div class="col-2 text-justify member">
+                <img src="teamPhotos/vic.png" class="img-fluid mx-auto d-block title" alt="Responsive image">
+                <h4>Name</h4>
+                <p>A short sentence or two about yourself, interests etc.</p>
+                <img src="images/membermail.svg" style="width:40px">
+                <img src="images/memberlinkedin.svg" style="width:40px">
+            </div>
+            <div class="col-2 text-justify member">
+                <img src="teamPhotos/vic.png" class="img-fluid mx-auto d-block title" alt="Responsive image">
+                <h4>Name</h4>
+                <p>A short sentence or two about yourself, interests etc.</p>
+                <img src="images/membermail.svg" style="width:40px">
+                <img src="images/memberlinkedin.svg" style="width:40px">
+            </div>
+            <div class="col-2 text-justify member">
+                <img src="teamPhotos/vic.png" class="img-fluid mx-auto d-block title" alt="Responsive image">
+                <h4>Name</h4>
+                <p>A short sentence or two about yourself, interests etc.</p>
+                <img src="images/membermail.svg" style="width:40px">
+                <img src="images/memberlinkedin.svg" style="width:40px">
             </div>
         </div>
-      </div>
 
       <nav class="navbar navbar-custom navbar-expand-lg navbar-light fixed-bottom">
         <a class="navbar-brand" href="/index.html"><img src="images/favicon_io/maroon-logo.png" style="width:40px"></a>
